[project]
name = "creatorclerk"
version = "0.25.5.31"
description = ""
authors = [
    {name = "Bee",email = "117178732+everloste@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (==2.32.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
